--- a/uhtml/css/senner.css
+++ b/uhtml/css/senner.css
@@ -306,7 +306,7 @@ nav li a::after {
 
 div.titlepage {
   height: 100vh;
-  background-image: url("qr.png");
+  background-image: url("media/qr.png");
   /*-webkit-filter: drop-shadow( -5px 5px 5px rgb(165, 165, 165) );
   filter: drop-shadow( -5px 5px 5px rgb(146, 8, 8)); */
   background-position: 50% 90%;
